# espeak-ng

./: .gitignore  CMakeLists.txt
cmake/: config.cmake  data.cmake  deps.cmake
src/: CMakeLists.txt
src/config/: CMakeLists.txt
src/include/: CMakeLists.txt
src/libespeak-ng/: CMakeLists.txt
src/ucd-tools/: CMakeLists.txt
